samples/_failures_safe/1761564127_7e5f64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_881a4da4.c: In function ‘main’:
./samples/SAFE/__tmp_881a4da4.c:171:9: error: expected declaration or statement at end of input
  171 |         }
      |         ^
./samples/SAFE/__tmp_881a4da4.c:171:9: error: expected declaration or statement at end of input
